# pyqbe

./: .gitignore  LICENSE  README.md  makefile  meson.build  pyproject.toml
.github/workflows/: wheels.yml
pyqbe/: __init__.py  _core.pyi
wrapper/: binding.cpp  gen_config.py  qbe_api.c
wrapper/include/: pyqbe.h
