[project]
name = "pyqbe"
readme = {file = "README.md", content-type = "text/markdown"}
version = "0.0.2"
requires-python = ">=3.14"
dependencies = []

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python','pybind11']

[project.urls]
Homepage = "https://github.com/Marpuriganesh/pyqbe"
Repository = "https://github.com/Marpuriganesh/pyqbe"
